[package]
name = "zkr-ethproofs-provers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
async-trait = "0.1.89"
